# python-ollama-typhoon-ocr

./: .gitignore  LICENSE  Makefile  README.md  api_response.py  main.py  pyproject.toml  requirements.txt
