[project]
name = "ollama-typhoon-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "certifi==2025.11.12",
    "click==8.3.1",
    "colorama==0.4.6",
    "distro==1.9.0",
    "fastapi==0.123.5",
    "ftfy==6.3.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "jiter==0.12.0",
    "openai==2.8.1",
    "pillow==12.0.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pypdf==6.4.0",
    "python-multipart==0.0.20",
    "sniffio==1.3.1",
    "starlette==0.50.0",
    "tqdm==4.67.1",
    "typhoon-ocr==0.4.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.38.0",
    "wcwidth==0.2.14",
]
